Added --enable-preview flag to use string templates preview feature in integration tests